--- a/matching_catholic_public_scores.ipynb
+++ b/matching_catholic_public_scores.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "17sZtDgB6llc6evs_1k1_oZ16lI2g7CWK",
-      "authorship_tag": "ABX9TyMSiBOWyNJm4c/4Y0zXCUAU",
+      "authorship_tag": "ABX9TyPSGdNAwJidKpnMU1a1c3K2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2486,7 +2486,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this case, we care about ATE because we want to know the potential effect of Catholic school on test scores.\n",
+        "In this case, we care about Average Treatment Effect (ATE) because we want to know the potential effect of Catholic school on test scores.\n",
         "\n",
         "The ATE value above is -0.133, indicating that students in Catholic schools would perform worse on standardized tests. The p-value is borderline, but would indicate statistical significance."
       ],
