--- a/matching_catholic_public_scores.ipynb
+++ b/matching_catholic_public_scores.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "17sZtDgB6llc6evs_1k1_oZ16lI2g7CWK",
-      "authorship_tag": "ABX9TyPSGdNAwJidKpnMU1a1c3K2",
+      "authorship_tag": "ABX9TyNyvmkxnkctAkphupcPKqY0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2707,7 +2707,7 @@
       "source": [
         "## Conclusions\n",
         "\n",
-        "Based on our analysis, we can reasonable say that students in Catholic schools perform worse on standardized tests than their counterparts in public schools."
+        "Based on our analysis, we can reasonably say that students in Catholic schools perform worse on standardized tests than their counterparts in public schools."
       ],
       "metadata": {
         "id": "0kkP0cgPqq2c"
